# rediserde

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: de.rs  error.rs  lib.rs  resp.rs  ser.rs
tests/: complex_structs.rs  structs.rs
