[package]
name = "rediserde"
description = "RESP (Redis Serialization Protocol) for Serde"
authors = ["Ofer Sadan <ofersadan85@gmail.com>"]
repository = "https://github.com/ofersadan85/rediserde"
readme = "README.md"
categories = [
    "data-structures",
    "encoding",
    "parser-implementations",
    "parsing",
]
documentation = "https://docs.rs/rediserde"
keywords = ["resp", "redis", "serde", "serialization"]
license-file = "LICENSE"

version = "0.1.1"
edition = "2024"

[dependencies]
serde = "1.0.219"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
